package cloud.spring.my.study.gof23.behaviorPatten.state.enums;

public enum Event {

    SAVE,

    SUBMIT,

    PASS,

    REJECT,

    TRANSFER,

    RETURNN,

}
